# retrui

./: .env.example  .gitignore  .lintstagedrc  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vercel.json
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
prisma/: schema.prisma
public/: manifest.json  robots.txt
rust-api/: Cargo.toml
rust-api/src/: README.md  main.rs
rust-api/src/models/: errors.rs  requests.rs  responses.rs
rust-api/src/routes/: fetch_content.rs  fetch_rss.rs  mod.rs
rust-api/src/security/: cors.rs  mod.rs  ssrf.rs
rust-api/src/services/: content_extractor.rs  mod.rs  rss_parser.rs
rust-api/src/utils/: retry.rs
scripts/: test-failing-feeds.ts  test-new-language-feeds.ts  test-new-turkish-feeds.ts  test-rss-feeds.ts  test-sync.ts
scripts/results/: failed-feeds.json  new-turkish-feeds-test.json  new-turkish-working.json  test-results.json  working-feeds.json
src/: middleware.ts  proxy.ts
src/app/: layout.tsx  loading.tsx  news-client.tsx  page.tsx  sitemap.ts
src/app/[locale]/: layout.tsx  (+1 more)
src/components/: Footer.tsx  column-settings-panel.tsx  feed-settings-panel.tsx  language-switcher.tsx  news-schema.tsx  share-buttons.tsx
src/i18n/: config.ts  use-translations.ts
src/lib/: api-security.ts  column-layouts.ts  content-extractor.ts  feed-health.ts  feed-preferences.ts  indexeddb.ts  prisma.ts  rss-feeds.ts  server-news.ts  storage.ts
(+17 files in other folders)
