[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client with connection pooling
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }

# RSS parsing
feed-rs = "1.4"

# HTML parsing & content extraction
readability = "0.2"
scraper = "0.18"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# URL parsing and validation
url = "2"
ipnet = "2.9"

# Retry logic
tokio-retry = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Time utilities
chrono = "0.4"

# Random number generation (for jitter)
rand = "0.8"

# Lazy static initialization
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
